# otel-rust

./: Cargo.toml  README.md
src/: dice_server.rs
